Remove dependency on Guava in annotation processor
Bump supported source version to 11